// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseline styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.type-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 16px;
  transform: translateY(2.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 24px;
  transform: translateY(6.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 32px;
  transform: translateY(10.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 40px;
  transform: translateY(14.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 48px;
  transform: translateY(18.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 56px;
  transform: translateY(22.909090909090914px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 16px;
  transform: translateY(2.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 24px;
  transform: translateY(6.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 32px;
  transform: translateY(10.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 40px;
  transform: translateY(14.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 48px;
  transform: translateY(18.181818181818183px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 56px;
  transform: translateY(22.181818181818183px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    );
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:type-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 16px;
    transform: translateY(2.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 24px;
    transform: translateY(6.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 32px;
    transform: translateY(10.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 40px;
    transform: translateY(14.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 48px;
    transform: translateY(18.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 56px;
    transform: translateY(22.909090909090914px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 16px;
    transform: translateY(2.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 24px;
    transform: translateY(6.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 32px;
    transform: translateY(10.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 40px;
    transform: translateY(14.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 48px;
    transform: translateY(18.181818181818183px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 56px;
    transform: translateY(22.181818181818183px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }
}"
`;

exports[`capheight styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.capheight-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 10.181818181818182px;
  transform: translateY(8.881784197001252e-16px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 18.18181818181818px;
  transform: translateY(4px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: -8.999999999999998px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 26.18181818181818px;
  transform: translateY(8px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 34.18181818181818px;
  transform: translateY(12px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 42.18181818181818px;
  transform: translateY(16px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 50.18181818181818px;
  transform: translateY(20px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 11.636363636363637px;
  transform: translateY(4.440892098500626e-16px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 19.636363636363637px;
  transform: translateY(4px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 27.636363636363637px;
  transform: translateY(8px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 35.63636363636364px;
  transform: translateY(12.000000000000002px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/3:before {
  content: '';
  margin-top: -25.000000000000004px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 43.63636363636364px;
  transform: translateY(16.000000000000004px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 51.63636363636364px;
  transform: translateY(20.000000000000004px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 10.181818181818182px;
    transform: translateY(8.881784197001252e-16px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 18.18181818181818px;
    transform: translateY(4px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: -8.999999999999998px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 26.18181818181818px;
    transform: translateY(8px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 34.18181818181818px;
    transform: translateY(12px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 42.18181818181818px;
    transform: translateY(16px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 50.18181818181818px;
    transform: translateY(20px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 11.636363636363637px;
    transform: translateY(4.440892098500626e-16px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 19.636363636363637px;
    transform: translateY(4px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 27.636363636363637px;
    transform: translateY(8px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 35.63636363636364px;
    transform: translateY(12.000000000000002px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3:before {
    content: '';
    margin-top: -25.000000000000004px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 43.63636363636364px;
    transform: translateY(16.000000000000004px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 51.63636363636364px;
    transform: translateY(20.000000000000004px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }
}"
`;

exports[`measure styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.measure-0 {
  max-width: 15ch
}

.measure-1 {
  max-width: 20ch
}

@media (min-width: 640px) {
  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:measure-0 {
    max-width: 15ch
  }

  .sm\\\\:measure-1 {
    max-width: 20ch
  }
}"
`;

exports[`rhythm styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.font-sans-400 {
}

.rhythm-0 > * + * {
  margin-top: 0px
}

.rhythm-y-0 > * + * {
  margin-top: 0px
}

.rhythm-x-0 > * + * {
  margin-left: 0px
}

.rhythm-1 > * + * {
  margin-top: 8px
}

.rhythm-y-1 > * + * {
  margin-top: 8px
}

.rhythm-x-1 > * + * {
  margin-left: 8px
}

.rhythm-2 > * + * {
  margin-top: 16px
}

.rhythm-y-2 > * + * {
  margin-top: 16px
}

.rhythm-x-2 > * + * {
  margin-left: 16px
}

@media (min-width: 640px) {
  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:font-sans-400 {
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 8px
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 8px
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 8px
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 16px
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 16px
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 16px
  }
}"
`;

exports[`use px 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.type-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 16px;
  transform: translateY(2.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 10.181818181818182px;
  transform: translateY(8.881784197001252e-16px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 0.5454545454545454;
  transform: translateY(-0.09090909090909083em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 24px;
  transform: translateY(6.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 18.18181818181818px;
  transform: translateY(4px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: -8.999999999999998px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.1168831168831168;
  transform: translateY(0.1948051948051949em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571429em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 32px;
  transform: translateY(10.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 26.18181818181818px;
  transform: translateY(8px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.6883116883116884;
  transform: translateY(0.4805194805194806em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 40px;
  transform: translateY(14.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 34.18181818181818px;
  transform: translateY(12px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.25974025974026;
  transform: translateY(0.7662337662337663em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 48px;
  transform: translateY(18.90909090909091px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 42.18181818181818px;
  transform: translateY(16px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.831168831168831;
  transform: translateY(1.051948051948052em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 56px;
  transform: translateY(22.909090909090914px);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 50.18181818181818px;
  transform: translateY(20px);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.402597402597402;
  transform: translateY(1.3376623376623376em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/5:before {
  content: '';
  margin-top: calc(-2.9285714285714284em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 16px;
  transform: translateY(2.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 11.636363636363637px;
  transform: translateY(4.440892098500626e-16px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 0.5454545454545454;
  transform: translateY(-0.09090909090909091em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 24px;
  transform: translateY(6.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 19.636363636363637px;
  transform: translateY(4px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.0454545454545454;
  transform: translateY(0.1590909090909091em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 32px;
  transform: translateY(10.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 27.636363636363637px;
  transform: translateY(8px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.5454545454545454;
  transform: translateY(0.40909090909090906em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 40px;
  transform: translateY(14.181818181818182px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 35.63636363636364px;
  transform: translateY(12.000000000000002px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/3:before {
  content: '';
  margin-top: -25.000000000000004px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.0454545454545454;
  transform: translateY(0.6590909090909091em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 48px;
  transform: translateY(18.181818181818183px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 43.63636363636364px;
  transform: translateY(16.000000000000004px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.5454545454545454;
  transform: translateY(0.9090909090909091em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 56px;
  transform: translateY(22.181818181818183px);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 51.63636363636364px;
  transform: translateY(20.000000000000004px);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3.0454545454545454;
  transform: translateY(1.1590909090909092em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/5:before {
  content: '';
  margin-top: calc(-2.5625em );
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 16px;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 8px,
    transparent 8px
    );
}

.measure-0 {
  max-width: 15ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0px;
}

.rhythm-y-0 > * + * {
  margin-top: 0px;
}

.rhythm-x-0 > * + * {
  margin-left: 0px;
}

.rhythm-1 > * + * {
  margin-top: 8px;
}

.rhythm-y-1 > * + * {
  margin-top: 8px;
}

.rhythm-x-1 > * + * {
  margin-left: 8px;
}

.rhythm-2 > * + * {
  margin-top: 16px;
}

.rhythm-y-2 > * + * {
  margin-top: 16px;
}

.rhythm-x-2 > * + * {
  margin-left: 16px;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:type-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 16px;
    transform: translateY(2.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 10.181818181818182px;
    transform: translateY(8.881784197001252e-16px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 0.5454545454545454;
    transform: translateY(-0.09090909090909083em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 24px;
    transform: translateY(6.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 18.18181818181818px;
    transform: translateY(4px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: -8.999999999999998px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.1168831168831168;
    transform: translateY(0.1948051948051949em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571429em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 32px;
    transform: translateY(10.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 26.18181818181818px;
    transform: translateY(8px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.6883116883116884;
    transform: translateY(0.4805194805194806em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 40px;
    transform: translateY(14.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 34.18181818181818px;
    transform: translateY(12px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.25974025974026;
    transform: translateY(0.7662337662337663em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 48px;
    transform: translateY(18.90909090909091px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 42.18181818181818px;
    transform: translateY(16px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.831168831168831;
    transform: translateY(1.051948051948052em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 56px;
    transform: translateY(22.909090909090914px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 50.18181818181818px;
    transform: translateY(20px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.402597402597402;
    transform: translateY(1.3376623376623376em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5:before {
    content: '';
    margin-top: calc(-2.9285714285714284em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 16px;
    transform: translateY(2.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 11.636363636363637px;
    transform: translateY(4.440892098500626e-16px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 0.5454545454545454;
    transform: translateY(-0.09090909090909091em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 24px;
    transform: translateY(6.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 19.636363636363637px;
    transform: translateY(4px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.0454545454545454;
    transform: translateY(0.1590909090909091em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 32px;
    transform: translateY(10.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 27.636363636363637px;
    transform: translateY(8px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.5454545454545454;
    transform: translateY(0.40909090909090906em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 40px;
    transform: translateY(14.181818181818182px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 35.63636363636364px;
    transform: translateY(12.000000000000002px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3:before {
    content: '';
    margin-top: -25.000000000000004px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.0454545454545454;
    transform: translateY(0.6590909090909091em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 48px;
    transform: translateY(18.181818181818183px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 43.63636363636364px;
    transform: translateY(16.000000000000004px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.5454545454545454;
    transform: translateY(0.9090909090909091em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 56px;
    transform: translateY(22.181818181818183px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 51.63636363636364px;
    transform: translateY(20.000000000000004px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3.0454545454545454;
    transform: translateY(1.1590909090909092em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5:before {
    content: '';
    margin-top: calc(-2.5625em );
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 15ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 8px;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 8px;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 8px;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 16px;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 16px;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 16px;
  }
}"
`;

exports[`use rem 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.type-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  transform: translateY(0.20779220779220786em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 0.7272727272727273;
  transform: translateY(6.344131569286608e-17em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 7.636363636363636px;
  transform: translateY(-1.2727272727272716px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.7142857142857142;
  transform: translateY(0.49350649350649356em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571429em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.2987012987012985;
  transform: translateY(0.2857142857142857em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571427em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 15.636363636363637px;
  transform: translateY(2.7272727272727284px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.2857142857142856;
  transform: translateY(0.7792207792207793em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.87012987012987;
  transform: translateY(0.5714285714285714em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 23.636363636363637px;
  transform: translateY(6.727272727272728px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.857142857142857;
  transform: translateY(1.064935064935065em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.4415584415584415;
  transform: translateY(0.8571428571428571em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 31.636363636363637px;
  transform: translateY(10.727272727272728px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.4285714285714284;
  transform: translateY(1.3506493506493507em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.0129870129870127;
  transform: translateY(1.1428571428571428em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 39.63636363636363px;
  transform: translateY(14.727272727272727px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.type-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 4;
  transform: translateY(1.6363636363636367em);
  padding-top: 1px;
}

.font-sans-400.type-0\\\\/5:before {
  content: '';
  margin-top: calc(-2.9285714285714284em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.5844155844155843;
  transform: translateY(1.4285714285714286em);
  padding-top: 1px;
}

.font-sans-400.capheight-0\\\\/5:before {
  content: '';
  margin-top: calc(-2.9285714285714284em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 14px;
  line-height: 47.63636363636363px;
  transform: translateY(18.727272727272727px);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1;
  transform: translateY(0.13636363636363638em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 0.7272727272727273;
  transform: translateY(2.7755575615628914e-17em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 8.727272727272727px;
  transform: translateY(-1.4545454545454546px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/0:before {
  content: '';
  margin-top: -1px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.5;
  transform: translateY(0.38636363636363635em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.2272727272727273;
  transform: translateY(0.25em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 16.727272727272727px;
  transform: translateY(2.5454545454545454px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/1:before {
  content: '';
  margin-top: -9px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2;
  transform: translateY(0.6363636363636364em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.7272727272727273;
  transform: translateY(0.5em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 24.727272727272727px;
  transform: translateY(6.545454545454545px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/2:before {
  content: '';
  margin-top: -17px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.5;
  transform: translateY(0.8863636363636364em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.2272727272727275;
  transform: translateY(0.7500000000000001em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625000000000002em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 32.72727272727273px;
  transform: translateY(10.545454545454545px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/3:before {
  content: '';
  margin-top: -25px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3;
  transform: translateY(1.1363636363636365em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.7272727272727275;
  transform: translateY(1.0000000000000002em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 40.72727272727273px;
  transform: translateY(14.545454545454545px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/4:before {
  content: '';
  margin-top: -33px;
  display: block;
  height: 0;
}

.font-sans-400.type-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3.5;
  transform: translateY(1.3863636363636365em);
  padding-top: 1px;
}

.font-sans-400.type-1\\\\/5:before {
  content: '';
  margin-top: calc(-2.5625em );
  display: block;
  height: 0;
}

.font-sans-400.capheight-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3.2272727272727275;
  transform: translateY(1.2500000000000002em);
  padding-top: 1px;
}

.font-sans-400.capheight-1\\\\/5:before {
  content: '';
  margin-top: calc(-2.5625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 16px;
  line-height: 48.72727272727273px;
  transform: translateY(18.545454545454547px);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/5:before {
  content: '';
  margin-top: -41px;
  display: block;
  height: 0;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 1rem;
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.08) 0.5rem,
    transparent 0.5rem
    );
}

.measure-0 {
  max-width: 15ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0rem;
}

.rhythm-y-0 > * + * {
  margin-top: 0rem;
}

.rhythm-x-0 > * + * {
  margin-left: 0rem;
}

.rhythm-1 > * + * {
  margin-top: 0.5rem;
}

.rhythm-y-1 > * + * {
  margin-top: 0.5rem;
}

.rhythm-x-1 > * + * {
  margin-left: 0.5rem;
}

.rhythm-2 > * + * {
  margin-top: 1rem;
}

.rhythm-y-2 > * + * {
  margin-top: 1rem;
}

.rhythm-x-2 > * + * {
  margin-left: 1rem;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:type-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.1428571428571428;
    transform: translateY(0.20779220779220786em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 0.7272727272727273;
    transform: translateY(6.344131569286608e-17em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 7.636363636363636px;
    transform: translateY(-1.2727272727272716px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.7142857142857142;
    transform: translateY(0.49350649350649356em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571429em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.2987012987012985;
    transform: translateY(0.2857142857142857em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571427em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 15.636363636363637px;
    transform: translateY(2.7272727272727284px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.2857142857142856;
    transform: translateY(0.7792207792207793em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.87012987012987;
    transform: translateY(0.5714285714285714em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 23.636363636363637px;
    transform: translateY(6.727272727272728px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.857142857142857;
    transform: translateY(1.064935064935065em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.4415584415584415;
    transform: translateY(0.8571428571428571em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 31.636363636363637px;
    transform: translateY(10.727272727272728px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.4285714285714284;
    transform: translateY(1.3506493506493507em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.0129870129870127;
    transform: translateY(1.1428571428571428em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 39.63636363636363px;
    transform: translateY(14.727272727272727px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 4;
    transform: translateY(1.6363636363636367em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-0\\\\/5:before {
    content: '';
    margin-top: calc(-2.9285714285714284em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.5844155844155843;
    transform: translateY(1.4285714285714286em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-0\\\\/5:before {
    content: '';
    margin-top: calc(-2.9285714285714284em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 14px;
    line-height: 47.63636363636363px;
    transform: translateY(18.727272727272727px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1;
    transform: translateY(0.13636363636363638em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 0.7272727272727273;
    transform: translateY(2.7755575615628914e-17em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 8.727272727272727px;
    transform: translateY(-1.4545454545454546px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0:before {
    content: '';
    margin-top: -1px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.5;
    transform: translateY(0.38636363636363635em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.2272727272727273;
    transform: translateY(0.25em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 16.727272727272727px;
    transform: translateY(2.5454545454545454px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1:before {
    content: '';
    margin-top: -9px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2;
    transform: translateY(0.6363636363636364em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.7272727272727273;
    transform: translateY(0.5em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 24.727272727272727px;
    transform: translateY(6.545454545454545px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2:before {
    content: '';
    margin-top: -17px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.5;
    transform: translateY(0.8863636363636364em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.2272727272727275;
    transform: translateY(0.7500000000000001em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625000000000002em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 32.72727272727273px;
    transform: translateY(10.545454545454545px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3:before {
    content: '';
    margin-top: -25px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3;
    transform: translateY(1.1363636363636365em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.7272727272727275;
    transform: translateY(1.0000000000000002em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 40.72727272727273px;
    transform: translateY(14.545454545454545px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4:before {
    content: '';
    margin-top: -33px;
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3.5;
    transform: translateY(1.3863636363636365em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:type-1\\\\/5:before {
    content: '';
    margin-top: calc(-2.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3.2272727272727275;
    transform: translateY(1.2500000000000002em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:capheight-1\\\\/5:before {
    content: '';
    margin-top: calc(-2.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 16px;
    line-height: 48.72727272727273px;
    transform: translateY(18.545454545454547px);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5:before {
    content: '';
    margin-top: -41px;
    display: block;
    height: 0;
  }

  .sm\\\\:measure-0 {
    max-width: 15ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0rem;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 0.5rem;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 0.5rem;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 0.5rem;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 1rem;
  }
}"
`;

exports[`xheight styles 1`] = `
".font-sans-400 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-sans-400.xheight-0\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 0.5454545454545454;
  transform: translateY(-0.09090909090909083em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/0:before {
  content: '';
  margin-top: calc(-0.07142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.1168831168831168;
  transform: translateY(0.1948051948051949em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/1:before {
  content: '';
  margin-top: calc(-0.6428571428571429em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 1.6883116883116884;
  transform: translateY(0.4805194805194806em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/2:before {
  content: '';
  margin-top: calc(-1.2142857142857142em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.25974025974026;
  transform: translateY(0.7662337662337663em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/3:before {
  content: '';
  margin-top: calc(-1.7857142857142858em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 2.831168831168831;
  transform: translateY(1.051948051948052em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/4:before {
  content: '';
  margin-top: calc(-2.357142857142857em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-0\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 0.875rem;
  line-height: 3.402597402597402;
  transform: translateY(1.3376623376623376em);
  padding-top: 1px;
}

.font-sans-400.xheight-0\\\\/5:before {
  content: '';
  margin-top: calc(-2.9285714285714284em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/0 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 0.5454545454545454;
  transform: translateY(-0.09090909090909091em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/0:before {
  content: '';
  margin-top: calc(-0.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/1 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.0454545454545454;
  transform: translateY(0.1590909090909091em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/1:before {
  content: '';
  margin-top: calc(-0.5625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/2 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 1.5454545454545454;
  transform: translateY(0.40909090909090906em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/2:before {
  content: '';
  margin-top: calc(-1.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/3 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.0454545454545454;
  transform: translateY(0.6590909090909091em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/3:before {
  content: '';
  margin-top: calc(-1.5625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/4 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 2.5454545454545454;
  transform: translateY(0.9090909090909091em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/4:before {
  content: '';
  margin-top: calc(-2.0625em );
  display: block;
  height: 0;
}

.font-sans-400.xheight-1\\\\/5 {
  font-family: \\"Inter\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
  font-size: 1rem;
  line-height: 3.0454545454545454;
  transform: translateY(1.1590909090909092em);
  padding-top: 1px;
}

.font-sans-400.xheight-1\\\\/5:before {
  content: '';
  margin-top: calc(-2.5625em );
  display: block;
  height: 0;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:xheight-0\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 0.5454545454545454;
    transform: translateY(-0.09090909090909083em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/0:before {
    content: '';
    margin-top: calc(-0.07142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.1168831168831168;
    transform: translateY(0.1948051948051949em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/1:before {
    content: '';
    margin-top: calc(-0.6428571428571429em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 1.6883116883116884;
    transform: translateY(0.4805194805194806em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/2:before {
    content: '';
    margin-top: calc(-1.2142857142857142em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.25974025974026;
    transform: translateY(0.7662337662337663em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/3:before {
    content: '';
    margin-top: calc(-1.7857142857142858em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 2.831168831168831;
    transform: translateY(1.051948051948052em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/4:before {
    content: '';
    margin-top: calc(-2.357142857142857em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 0.875rem;
    line-height: 3.402597402597402;
    transform: translateY(1.3376623376623376em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-0\\\\/5:before {
    content: '';
    margin-top: calc(-2.9285714285714284em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 0.5454545454545454;
    transform: translateY(-0.09090909090909091em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/0:before {
    content: '';
    margin-top: calc(-0.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.0454545454545454;
    transform: translateY(0.1590909090909091em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/1:before {
    content: '';
    margin-top: calc(-0.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 1.5454545454545454;
    transform: translateY(0.40909090909090906em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/2:before {
    content: '';
    margin-top: calc(-1.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.0454545454545454;
    transform: translateY(0.6590909090909091em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/3:before {
    content: '';
    margin-top: calc(-1.5625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 2.5454545454545454;
    transform: translateY(0.9090909090909091em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/4:before {
    content: '';
    margin-top: calc(-2.0625em );
    display: block;
    height: 0;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5 {
    font-family: \\"Inter\\", sans-serif;
    font-weight: 400;
    font-style: normal;
    display: block;
    font-size: 1rem;
    line-height: 3.0454545454545454;
    transform: translateY(1.1590909090909092em);
    padding-top: 1px;
  }

  .font-sans-400.sm\\\\:xheight-1\\\\/5:before {
    content: '';
    margin-top: calc(-2.5625em );
    display: block;
    height: 0;
  }
}"
`;
